[workspace]
members = [
	"exports",
	"crates/scanner",
	"crates/address",
	"crates/memorylog",
    "crates/microsoft/rtti",
	"crates/microsoft/dll",
	"crates/microsoft/runtime",

	"mod/crash-logger",
	"mod/eldenring/allocator-hook",
	"mod/eldenring/matchmaking-test",

	"bin/offline-aob",
	"bin/rtti-hierarchy-graph",
	"bin/allocator-log-splitter",
	"bin/virtual-destructor-finder",
]

[workspace.dependencies]
log = "0.4"
log4rs = "1"
bincode = "1.3.3"
serde = "1.0"
detour = { git = "https://github.com/veeenu/detour-rs.git", branch = "master" }
