[workspace]
members = [
	"exports",
	"crates/scanner",
	"crates/address",
    "crates/microsoft/rtti",
	"crates/microsoft/dll",
	"crates/microsoft/runtime",

	"mod/crash-logger",
]

[workspace.dependencies]
log = "0.4"
log4rs = "1"
bincode = "1.3.3"
serde = "1.0"
detour = { git = "https://github.com/Hpmason/retour-rs", branch = "master" }
