[package]
name = "broadsword"
version = "0.0.1"
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"

[dependencies]
broadsword_dll = { path = "../crates/microsoft/dll" }
broadsword_rtti = { path = "../crates/microsoft/rtti" }
broadsword_logging = { path = "../crates/logging" }
broadsword_scanner = { path = "../crates/scanner" }
broadsword_microsoft_debug = { path = "../crates/microsoft/debug" }
broadsword_microsoft_runtime = { path = "../crates/microsoft/runtime" }
