[package]
name = "broadsword_microsoft_debug"
version = "0.0.1"
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"

[dependencies]
log = "0.4.19"
rand = "0.8.5"
broadsword_microsoft_runtime = { path = "../runtime" }
detour = { git = "https://github.com/veeenu/detour-rs.git", branch = "master" }

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_System_Kernel",
    "Win32_System_Diagnostics_Debug",
]