[package]
name = "broadsword_microsoft_runtime"
version = "0.0.1"
edition = "2021"

[dependencies]
broadsword_address = { path = "../../address" }
broadsword_rtti = { path = "../rtti" }

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
]
