[package]
name = "broadsword_microsoft_runtime"
version = "0.0.1"
edition = "2021"

[dependencies]
log = { workspace = true }
broadsword_rtti = { path = "../rtti" }

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
]
