[package]
name = "eldenring-allocator-hook"
version = "0.1.0"
edition = "2021"

[dependencies]
broadsword_address = { path="../../../crates/address" }
broadsword = { path="../../../main" }
detour = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
paste = "1"
tracing = "0.1"
repeated = "0.1.2"
tracing-subscriber = "0.3"

[dependencies.tracy]
package = "tracy_full"
version = "1.3.0"
features = ["enable", "tracing", "system-tracing", "sampling"]

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
]

[lib]
crate-type = ["cdylib"]